--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.11",
+    "multer": "^1.4.2",
+    "sharp": "^0.23.3",
     "validator": "^12.0.0"
   }
 }
